6770457: Using ToolTips causes inactive app window to exhibit active window behavior

Reviewed-by: art, ant